# vgmreader

./: .ccls  .gitignore  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac  flymake.mk
.github/workflows/: c-cpp.yml
check_tests/: Makefile.am  check_decode_file.c  check_header.c  check_main.c
src/: Makefile.am  args.c  args.h  decode.c  decode.h  main.c  vgm.c  vgm.h  vgm_config.c  vgm_config.h  vgm_helper.c  vgm_helper.h
tests/: Makefile.am  check_check.h  check_core.c  check_decode_file.c  check_header.c  check_main.c  test_commands.c  test_core.c  test_decoder.c  test_header.c  test_process_commands.c  test_to_string_cmd.c  testing.c
